--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,6 +37,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -48,7 +55,9 @@ jobs:
           build-args: |
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
-          tags: dragonflyoss/scheduler:${{ steps.get_version.outputs.VERSION }}
+          tags: |
+            dragonflyoss/scheduler:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/scheduler:${{ steps.get_version.outputs.VERSION }}
           push: true
 
   push_dfdaemon_to_registry:
@@ -82,6 +91,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -93,7 +109,9 @@ jobs:
           build-args: |
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
-          tags: dragonflyoss/dfdaemon:${{ steps.get_version.outputs.VERSION }}
+          tags: |
+            dragonflyoss/dfdaemon:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/dfdaemon:${{ steps.get_version.outputs.VERSION }}
           push: true
 
   push_cdn_to_registry:
@@ -127,6 +145,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -138,7 +163,9 @@ jobs:
           build-args: |
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
-          tags: dragonflyoss/cdn:${{ steps.get_version.outputs.VERSION }}
+          tags: |
+            dragonflyoss/cdn:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/cdn:${{ steps.get_version.outputs.VERSION }}
           push: true
 
   push_manager_to_registry:
@@ -172,6 +199,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -183,5 +217,7 @@ jobs:
           build-args: |
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
-          tags: dragonflyoss/manager:${{ steps.get_version.outputs.VERSION }}
+          tags: |
+            dragonflyoss/manager:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/manager:${{ steps.get_version.outputs.VERSION }}
           push: true
