--- a/docs/en/config/cdn.yaml
+++ b/docs/en/config/cdn.yaml
@@ -109,8 +109,8 @@ verbose: false
 # default is -1. If it is 0, pprof will use a random port.
 pprofPort: -1
 
-# jaeger endpoint url
-jaeger:
+# jaeger endpoint url, like: http://jaeger.dragonfly.svc:14268/api/traces
+jaeger: ""
 
 # service name used in tracer
 # default: dragonfly-cdn
