--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -123,7 +123,7 @@ verbose: false
 # default is -1. If it is 0, pprof will use a random port.
 pprofPort: -1
 
-# jaeger endpoint url
+# jaeger endpoint url, like: http://jaeger.dragonfly.svc:14268/api/traces
 # default: ""
 jaeger: ""
 
