--- a/docs/zh-CN/config/cdn.yaml
+++ b/docs/zh-CN/config/cdn.yaml
@@ -117,8 +117,8 @@ verbose: false
 pprofPort: -1
 
 # jaeger 地址
-# 默认使用空字符串（不配置 jaeger）
-jaeger:
+# 默认使用空字符串（不配置 jaeger）, 例如: http://jaeger.dragonfly.svc:14268/api/traces
+jaeger: ""
 
 # tracer 中使用的 service-name
 # 默认值：dragonfly-cdn
