--- a/docs/zh-CN/config/dfget.yaml
+++ b/docs/zh-CN/config/dfget.yaml
@@ -35,10 +35,10 @@ scheduler:
 
 # 是否开启 verbose 日志模式
 verbose: true
+
 # 遥测配置
-telemetry:
-  # jaeger 地址, 例如: http://jaeger.dragonfly.svc:14268
-  jaeger: ""
+# jaeger 地址, 例如: http://jaeger.dragonfly.svc:14268/api/traces
+jaeger: ""
 
 # 用于注册到调度器的 daemon 信息
 host:
